- Implemented band-limited synthesis using blargg's blip_buf library - Version is now 1.6
git-tfs-id: [http://localhost:8080/tfs/DefaultCollection/]$/foobar2000/files/plugins.root;C542

--- a/foo_input_hvl.vcproj
+++ b/foo_input_hvl.vcproj
@@ -316,6 +316,14 @@
 	</References>
 	<Files>
 		<File
+			RelativePath=".\blip_buf.c"
+			>
+		</File>
+		<File
+			RelativePath=".\blip_buf.h"
+			>
+		</File>
+		<File
 			RelativePath=".\foo_input_hvl.rc"
 			>
 		</File>
